# sil-kit-adapters-common

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: pull_request_template.md
.github/workflows/: test-superprojects.yaml
cmake/: BasicPresets.json  BuildOptions.cmake  BuildProfile.cmake  Building.cmake  FindSilKit.cmake  InstallFunctions.cmake  LinuxPresets.json  Packaging.cmake  Prerequisites.cmake  QNXPresets.json  QnxPresets.json  RepoTargets.cmake  WindowsPresets.json
demos/: CMakeLists.txt  PubSubEchoDevice.hpp  SilKitDemoBytesPubSubEchoDevice.cpp  SilKitDemoChardevPubSubEchoDevice.cpp
docs/sil-kit-dashboard/: README.md
include/adapter/: ParticipantCreation.hpp
include/common/: Cli.hpp  Exceptions.hpp  Parsing.hpp  ParticipantCreation.hpp  SocketToBytesPubSubAdapter.hpp  SocketToDatagramPubSubAdapter.hpp  SocketToPubSubAdapter.hpp  StringUtils.hpp
include/common/util/: PubSubTopicParsing.hpp  SocketEndpointParsing.hpp  WriteUint.hpp
include/util/: Parsing.hpp  StringUtils.hpp
source/: CMakeLists.txt
source/adapter/: Cli.cpp  ParticipantCreation.cpp  SignalHandler.cpp  SocketToBytesPubSubAdapter.cpp  SocketToDatagramPubSubAdapter.cpp  SocketToPubSubAdapter.cpp
source/util/: Parsing.cpp
